css/style.css
/* ... */
ul.toc-menu .divider {
	box-shadow: 0px 10px 10px 0px rgba(0,0,0,.1);
	display: block;
	z-index: +500;
	max-width: 80%;
	height: 10px;
	margin: -30px 10% 0px 10%;
	background-color: rgba(241,251,255,0);
}

/* General Styles */

h1 {
	text-transform: uppercase;
	font-size: 52px;
	line-height: 49px;
	font-weight: 600;
	text-align: center;
}
h2 {
	font-size: 21px;
	font-weight: 400;
	line-height: 30px;
	color: #eb0478;
	padding: 16px 0 60px;
	text-align: center;
}
h3 {
	font-size: 32px;
	color: #eb0478;
	font-weight: 500;
	line-height: 40px;
	padding-bottom: 20px;
}
h4 {
	font: italic 700 23px/25px "abril-display",sans-serif;
	color: #05bbff;
}
h5 {
	color: #1f1f1f;
	font-size: 21px;
	font-weight: 600;
	padding-bottom: 10px;
}
h6 {
	color: #eb0478;
	text-transform: uppercase;
	font-size: 17px;
	font-weight: 400;
	padding-bottom: 18px;
}
p {
	font-size: 21px;
	line-height: 32px;
	padding: 0 0 38px 0;
	font-weight: 300;
	color: #524F4F;
}
.container-fluid.article {
	width: 90%;
	max-width: 1200px;
}
.bg-img-container-wrap {
	padding-bottom: 60px;
	position: relative;
}
a:link,
a:hover,
a:active,
a:visited {
	text-decoration: none;
}

/* Region hero */

.region-hero {
	background-size: cover;
	position: relative;
	overflow: hidden;
}
.region-hero video#nrthrn-hero {
	position: absolute;
	top: 50%;
	left: 50%;
	min-width: 100%;
	min-height: 100%;
	width: auto;
	height: auto;
	z-index: 50!important;
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
  	transform: translate(-50%, -50%);
}

/* Region Hero SVG Styles */

.region-hero-title {
	position: absolute;
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%,-50%);
	width: 875px;
	z-index: 100!important;
}
.region-hero-title .region-loc {
	font-weight: 900;
	font-size:67.8428px;
	letter-spacing:6px;
	stroke: none;
	text-transform: uppercase;
	fill: #FFFFFF;
}
.region-hero-title .state {
	font-weight: 300;
	text-transform: uppercase;
	font-size:59.8613px;
	letter-spacing:5.25px;
	fill: #FFFFFF;
}
.region-hero-title .shad {
	fill: #000000;
	filter: url(#pictureFilter);
	opacity: .8;
}
.region-hero-title .diamond {
	fill:none;
	stroke:#FFFFFF;
	stroke-width:2;
	stroke-miterlimit:10;
}
.region-hero-title .diamond.shad {
	stroke:#000000;
	filter: url(#pictureFilter);
	opacity: .8;
}

/* Blog Post Styles */

.bg-img-container-wrap#nrthrn-blog-post {
	background-image: url("../images/FPO_Brandi_BG_img.jpg");
	background-size: 100% auto;
	background-repeat: no-repeat;
}
.container-fluid.article.blogger-post h1,
.container-fluid.article.blogger-post h2 {
	text-align: left;
}
.container-fluid.article.blogger-post h2 {
	font-size: 22px;
}
.blogger-info-box {
	max-width: 750px;
}

/* Section Header Styles*/

.section-marker {
	display: block;
	height:50px;
	width: auto;
	margin: 0 auto -25px;
	position: relative;
	z-index: 50!important;
}
.bg-img-container-wrap.northern {
	background-image: url("../images/section-bg-triangle.jpg");
	background-size: 100% auto;
	background-repeat: no-repeat;
}
.container-fluid.article h1 {
	padding-top: 100px;
}
.container-fluid.article h2 {
	font-size: 21px;
}

/* Article Styles */

.article h1 {
	text-align: center;
}

.article h2 {
	text-align: center;
}

.article .col-md-12 p {
	margin-top: 50px;
	text-align: center;
}

ul.scroll-list {
	position: relative;
	width: 100%;
	height: 100v;
}

[class*="parallax-bg__"] {
	height: 100vh;
	position: relative;
	background-attachment: fixed;
	background-position: center center;
	background-size: cover;
    box-shadow: inset 0 0 1em #111;
}
.parallax-bg__empty {
	background-image: none;
	box-shadow: none;

}
.parallax-bg__myers {
	background-image: url(../images/Article_Roadtrip/alamy_RM_bp6amt.jpg);
}

.scroll-list-box {
	width: 100%;
	background-color: rgba(255,255,255,.95);
	-webkit-box-shadow: 0 10px 6px -6px rgba(0,0,0,.5);
	   -moz-box-shadow: 0 10px 6px -6px rgba(0,0,0,.5);
	        box-shadow: 0 10px 6px -6px rgba(0,0,0,.5);
	border: 2px solid rgba(5,187,255,1);
	margin-bottom: 50%;
	float: left;
	position: relative;
	z-index: +1;
}

.scroll-list-box:first-of-type {
	margin-top: 50%;
}

.article .col-md-12 .scroll-list-box p {
	clear: both;
	padding: 25px;
	text-align: left;
}

.box-header {
	width: 100%;
	display: inline-block;
	float: left;
	font-weight: 500;
	font-size: 25px;
	text-transform: uppercase;
	letter-spacing: 2px;
	border-bottom: 1px solid rgba(5,187,255,1);
}

.one-line {
	line-height: 25px;
}

.box-header-num {
	float: left;
	font-weight: 900;
	font-size: 50px;
	color: rgba(235,4,120,1);
	padding: 25px;
	margin-right: 25px;
	border-right: 1px solid rgba(5,187,255,1);
}

.box-header .stop-name {
	display: block;
	padding: 25px 0;
}

/* Specific Article Styles */

#article-roadtrip .container-fluid.article {
	width: 100%;
	padding-left: 0px;
	padding-right: 0px;
	margin-left: 0px;
	margin-right: 0px;
}

#article-roadtrip .col-md-12.article-head {
	width: 90%;
	padding-left: 30px;
	padding-right: 30px;
	margin-left: 5%;
	margin-right: 5%;
}

#list-roadtrip {
	margin-top: 0px;
}

#article-roadtrip .scroll-list .col-md-6 {
	margin-left: 5%;
	margin-right: 5%;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	z-index: +2;
}

.roadtrip-circle {
	position: absolute;
	top: 50%;
	transform: translateY(-50%) !important;
	left: 50%;
	width: 800px;
	height: 800px;
	margin: 0 auto;
/*	background-image: url("../images/FPO_NCA.jpg");
	background-size: 100%;*/
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	border-radius: 50%;
	box-shadow: 0px 0px 0px 8px rgba(235,4,120,1);
	z-index: +1;
}

/* Slideshow/Accordion Styles */ 

.hideContentWrap {
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	background-color: #05bbff;
	width: 950px;
	margin: 0 auto 1px;
	position: relative;
	text-align: center;
	overflow: hidden;
}
/* ... */

